--- a/templates/submitted.html
+++ b/templates/submitted.html
@@ -21,8 +21,9 @@
 <body>
   <div class="card">
     <div class="header">
-      <img src="/waltonlogo_red1.jpg" alt="Walton logo" class="logo">
-      <strong>Walton Time Off</strong>
+      <img src="{{ url_for('static', filename='waltonlogo_red1.jpg') }}"
+           alt="Walton logo"
+           class="logo">
     </div>
 
     <h2>Thank you!</h2>
